--- a/src/app/srcm/srcm-dashboard/srcm-dashboard.component.html
+++ b/src/app/srcm/srcm-dashboard/srcm-dashboard.component.html
@@ -1,1 +1,7 @@
-<p>srcm-dashboard works!</p>
+<nb-card>
+  <nb-card-header>School details</nb-card-header>
+  <nb-card-body>
+
+  </nb-card-body>
+  <nb-card-footer>school name abc school</nb-card-footer>
+</nb-card>
